-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.675 2009-12-09 22:25:10 guru Exp $
-----------------------------------------------------------------------------------------

2009-12-8	pwessel
	* sph/sphinterpolate.c:	Bad index on line 317 went outside array limit.
				Did not initialize the grid header properly.
	* sph/sphdistance.c:	Did not initialize the grid header properly.
	* misc/gmtstitch.c:	NULL segment headers passed to strcpy() and
				fixed output message when -C and only one segment.

2009-12-7	pwessel
	* grdtrack.c:		The -Z option gave z-values a longitude-formatting

2009-11-29	pwessel
	* x2sys/x2sys.c:	Automatically strip off extensions for tracks given
				via list files.
	* x2sys/x2sys_get.c:	Added -E to select extensions on output.

2009-11-28	pwessel
	* x2sys/x2sys.c:	Now, various lists can contain header records
	* x2sys/x2sys.c:	Added internal book-keeping so we know which
				in AND out columns correspond to x, y, and t.
	* x2sys/x2sys_datalist.c:	Should now get the correct data columns.
	* x2sys/x2sys_get.c:		Added -Q[i|e] to be used with -L.
	* x2sys/x2sys_solve.c:	Added -Z to remove smallest dist/time for -Ed|t

2009-11-26	pwessel
	* grdcontour.c:		1) -Q should only apply to closed contours
				2) -T failed to find inside point for oblique projections.
	* x2sys/x2sys_get.c:	-D now only lists track names

2009-11-24	pwessel
	* gmt_init.c:		Guard against getting a negative hash value (happened
				when text was Russian language codes from ru.d)
2009-11-23	pwessel
	* grdlandmask.c:	Round-off and bug caused missing nodes for -F -Rd

2009-11-16	remko
	* psxyz.c:		Fixed bug in distance sorting (also made much simpler).

2009-11-15	jluis
	* x2sys/x2sys_list.c:	Weights were not written out when names were selected as well,
				as in -Fncw

2009-11-12	pwessel
	* fitcircle.c:		Now, -S optionally takes a latitude instead of finding
				the best-fitting latitude.